# imagecluster

./: .gitignore  AUTHORS  ChangeLog  setup.cfg
imagecluster/: calc.py  io.py
imagecluster/tests/: cluster_test.py  detailed_test.py  score_test.py  tests.py  tests_console.py  uniform_test.py
