[metadata]
name = imagecluster
summary = cluster images based on image content using a pre-trained deep neural network and hierarchical clustering
description-file = README.rst
home-page = https://github.com/Heladio-ac/imagecluster
author = Steve Schmerler
author_email = git@elcorto.com
license = BSD 3-Clause
keywords =
    image
    cluster
    vgg16
    deep-learning

[files]
packages =
    imagecluster
